<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_url"
        android:title="@string/copy_url"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_wrap_lines"
        android:checkable="true"
        android:checked="false"
        android:title="@string/wrap_lines"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download"
        android:title="@string/download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_file"
        android:title="@string/view_file"
        app:showAsAction="never" />

</menu>