<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_normal"
        android:background="@color/white"
        android:minHeight="350dp"
        android:minWidth="250dp"
        app:cardElevation="@dimen/spacing_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorAccent"
                android:padding="@dimen/spacing_normal"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_normal"
                android:paddingRight="@dimen/spacing_normal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:hint="@string/username">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/user_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionSend"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/login_bn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/fab_margin"
                        android:src="@drawable/ic_arrow_back_title"
                        android:tint="@color/white"
                        app:backgroundTint="@color/colorAccent"
                        app:fabSize="normal" />

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/fab_margin"
                        android:visibility="gone" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/oauth_tip" />

                <Button
                    android:id="@+id/oauth_login_bn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/spacing_normal"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/login_in_browser"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>